objects/QC_Items__c.object
<CustomObject>
    <description>Replaces individual product lines that are inherent to Salesforce.com.  This will accomodate our need to roll up totals by QC instead of list price.</description>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Differentiates between family and BZ/CBLT</description>
        <label>Product Family</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Credit_Type__c</fullName>
        <description>Differentiates QC types for reporting purposes.  Will be hidden on Opportunity related Product QC layout.</description>
        <inlineHelpText>DigA = display, dap, search, remarketing, and bz DA.  DigM = everything else.</inlineHelpText>
        <label>Quota Credit Type</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_QC__c</fullName>
        <description>Level of QC on QC Calculator.  Not final.</description>
        <label>Suggested QC</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>QC Items</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Family__c</columns>
        <columns>Quota_Credit_Type__c</columns>
        <columns>Suggested_QC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>